# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md  roadmap.txt
include/core/: Block.h  BlockFactory.h  Camera.h  GameObject.h  KeyboardController.h  Mesh.h  MouseController.h  Primitives.h  Scene.h  WorldGenerator.h
include/core/ECS/: Component.h  Entity.h  System.h  World.h
include/core/ECS/Components/: MeshComponent.h  TransformComponent.h
include/core/ECS/Systems/: PhysicsSystem.h  RenderSystem.h
include/graphics/: IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/core/: Block.cpp  BlockFactory.cpp  Camera.cpp  GameObject.cpp  KeyboardController.cpp  Mesh.cpp  MouseController.cpp  Primitives.cpp  Scene.cpp  WorldGenerator.cpp
src/core/ECS/Systems/: PhysicsSystem.cpp
src/graphics/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
